--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^2.0.3",
+    "@vercel/analytics": "^1.2.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
